--- a/style.css
+++ b/style.css
@@ -32,3 +32,9 @@ a:active{
 a:hover{
     font-size: 40px
 }
+#Addvirt{
+    height: 150p-x;
+    position: fixed;
+    right: 0px;
+    bottom: 0px;
+}
