--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ a:hover{
     font-size: 40px
 }
 #Addvirt{
-    height: 150p-x;
+    height: 150px;
     position: fixed;
     right: 0px;
     bottom: 0px;
